feat:nuevo endpoint para consultar periodos de rol por documento udistrital/sisifo_documentacion#108
